--- a/common/templates/common/chat.html
+++ b/common/templates/common/chat.html
@@ -17,7 +17,8 @@
                 <div class="list-group my-2 rounded-0">
       
                   {% for p in persons %}
-                    {% if not p == me %}
+                    {% if not p == user %}
+                    
                       <a href="{% url 'common:chat' p.username %}" class="list-group-item list-group-item-action list-group-item-light rounded-0">
                         {% if p.employee.profile_image %}
                         <div class="media"><img src="{{ p.employee.profile_image.url }}" alt="user" height="50px" width="50px" class="rounded-circle d-none d-lg-block">
