--- a/common/templates/common/chat_room.html
+++ b/common/templates/common/chat_room.html
@@ -29,10 +29,10 @@
       
               <div class="messages-box">
                 <div class="list-group my-2 rounded-0">
-                  <p class="text-center">Ваше имя пользователя: <strong>{{ me }}</strong></p>
+                  <p class="text-center">Ваше имя пользователя: <strong>{{ user }}</strong></p>
       
                   {% for p in persons %}
-                    {% if not p == me %}
+                    {% if not p == user %}
                       <a href="{% url 'common:chat' p.username %}" class="{% if p.username == recipient.username %} list-group-item list-group-item-action active text-white rounded-0 {% else %} list-group-item list-group-item-action list-group-item-light rounded-0 {% endif %}">
                         {% if p.employee.profile_image %}
                         <div class="media"><img src="{{ p.employee.profile_image.url }}" alt="user" height="50px" width="50px" class="rounded-circle d-none d-lg-block">
@@ -95,8 +95,9 @@
 {% block script %}
 <script src="https://cdn.jsdelivr.net/npm/emoji-button@latest/dist/index.min.js"></script>
 <script>
-    const url = 'ws://' + window.location.host + '/ws' + window.location.pathname;
+    const url = 'ws://' + window.location.host + '/ws' + window.location.pathname; //указать порт при необходимости
     const ws = new WebSocket(url);
+    console.log(window.location.pathname)
 
     function scrollToBottom() {
         let objDiv = document.getElementById("message-list");
